# busca-binaria

busca_binaria/: busca_binaria.py  cli.py  pyproject.toml
